--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -26,7 +26,7 @@
         "youtube": "YouTube",
         "vimeo": "Vimeo",
         "tiktok": "TikTok",
-        "discord": "Discord"  <!-- Add this line -->
+        "discord": "Discord" 
       }
     },
     "continue_shopping": "Continue shopping",
@@ -217,7 +217,7 @@
   },
   "templates": {
     "search": {
-      "no_results": "No results found for "{{ terms }}". Check the spelling or use a different word or phrase.",
+      "no_results": "No results found for {{ terms }}. Check the spelling or use a different word or phrase.",
       "page": "Page",
       "products": "Products",
       "results_pages_with_count": {
@@ -237,11 +237,11 @@
         "other": "{{ count }} results"
       },
       "results_with_count_and_term": {
-        "one": "{{ count }} result found for "{{ terms }}"",
-        "other": "{{ count }} results found for "{{ terms }}"
+        "one": "{{ count }} result found for {{ terms }}",
+        "other": "{{ count }} results found for {{ terms }}"
       },
       "title": "Search results",
-      "search_for": "Search for "{{ terms }}"",
+      "search_for": "Search for {{ terms }}",
       "suggestions": "Suggestions",
       "pages": "Pages"
     },
